demo-app/testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testpod
  labels:
    role: test
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["sleep", "3600"]
